--- a/style.css
+++ b/style.css
@@ -1,5 +1,48 @@
 body {
   width: 100%;
   height: 100%;
-  margin: 0;
+  margin: auto;
+}
+
+h1 {
+  text-align: center;
+}
+
+nav {
+  text-align: center;
+}
+
+nav a {
+  padding: 10px;
+  background-color: #cceeff;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+figcaption {
+  text-align: center;
+  font-size: 75%;
+}
+
+#featured-property p {
+  width: 800px;
+  text-align: center;
+  font-size: 115%;
+  margin: auto;
+}
+
+#details {
+  display: block;
+}
+
+#details div {
+  float: left;
+  background: #e60000;
+  text-align: center;
+  width: 25%;
+
 }
